--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,27 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
+    margin: 0;
+    min-width: 320px;
+    min-height: 100vh;
+    background-image:
+        linear-gradient(
+            160deg,
+            hsla(33, 22%, 42%, 0.75) 0%,
+            hsla(35, 20%, 58%, 0.7) 30%,
+            hsla(30, 24%, 45%, 0.65) 60%,
+            hsla(28, 20%, 30%, 0.75) 100%
+        ),
+        url("/raster-image.jpg");
+    background-size: cover;
+    background-position: center;
 }
